# rust-serverless

./: .gitignore  README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
rust_app/: Cargo.toml
rust_app/src/common/: car.rs
